added backgrounds and recolored text boxes and buttons for better visual
Signed-off-by: Alexis <ambrizlex@gmail.com>

--- a/app/src/main/res/layout/armor_information.xml
+++ b/app/src/main/res/layout/armor_information.xml
@@ -5,12 +5,15 @@
     android:id="@+id/frameLayout10"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/spacebackgroundgif"
     tools:context=".ArmorInformation">
 
     <Button
         android:id="@+id/backtodataview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#FFFFFF"
+        android:textColor="@color/black"
         android:text="back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +26,7 @@
         android:id="@+id/armorSelector"
         android:layout_width="400dp"
         android:layout_height="83dp"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.272"
@@ -35,9 +39,10 @@
         android:layout_width="400dp"
         android:layout_height="140dp"
         android:text="TextView"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.272"
+        app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.248" />
@@ -47,6 +52,7 @@
         android:layout_width="400dp"
         android:layout_height="140dp"
         android:text="TextView"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.272"
@@ -59,6 +65,7 @@
         android:layout_width="400dp"
         android:layout_height="140dp"
         android:text="TextView"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
@@ -71,6 +78,7 @@
         android:layout_width="400dp"
         android:layout_height="140dp"
         android:text="TextView"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
