--- a/app/src/main/res/layout/spells_information.xml
+++ b/app/src/main/res/layout/spells_information.xml
@@ -5,84 +5,99 @@
     android:id="@+id/frameLayout9"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/magicduel"
     tools:context=".spellsInformation">
 
     <Spinner
         android:id="@+id/spellSelector"
         android:layout_width="400dp"
-        android:layout_height="83dp"
+        android:layout_height="80dp"
+        android:background="#896F6F"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.272"
+        app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.087" />
+        app:layout_constraintVertical_bias="0.096" />
 
     <TextView
         android:id="@+id/spellCastingTime"
         android:layout_width="400dp"
-        android:layout_height="110dp"
+        android:layout_height="100dp"
+        android:background="#896F6F"
         android:text="TextView"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.227" />
+        app:layout_constraintVertical_bias="0.239" />
 
     <TextView
         android:id="@+id/spellRange"
         android:layout_width="400dp"
-        android:layout_height="110dp"
+        android:layout_height="100dp"
+        android:background="#896F6F"
         android:text="TextView"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.404" />
+        app:layout_constraintVertical_bias="0.418" />
 
     <TextView
         android:id="@+id/SpellDescrition"
         android:layout_width="400dp"
-        android:layout_height="110dp"
+        android:layout_height="100dp"
+        android:background="#896F6F"
         android:text="TextView"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.758" />
+        app:layout_constraintVertical_bias="0.784" />
 
     <TextView
         android:id="@+id/supportedClasses"
         android:layout_width="400dp"
-        android:layout_height="110dp"
+        android:layout_height="100dp"
+        android:background="#896F6F"
         android:text="TextView"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.935" />
+        app:layout_constraintVertical_bias="0.974" />
 
     <TextView
         android:id="@+id/spellComponents"
         android:layout_width="400dp"
-        android:layout_height="110dp"
+        android:layout_height="100dp"
+        android:background="#896F6F"
         android:text="TextView"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.581" />
+        app:layout_constraintVertical_bias="0.599" />
 
     <Button
         android:id="@+id/backtodataview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
+        android:textColor="@color/black"
+        android:backgroundTint="#896F6F"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.009"
